# MediaProcess

./: CMakeLists.txt  README.md
src/: media_element.h  media_main.cc  media_process.h
